attached_assets/Pasted-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-endif-Jinja-was-looking-for-the-fo-1749165125385_1749165125386.txt
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
172.31.128.15 - - [05/Jun/2025 23:08:44] "GET /processos/visualizar/d76ba2d1-4164-487a-a809-ac81628f3dbd?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 304 -
172.31.128.15 - - [05/Jun/2025 23:08:45] "GET /processos/visualizar/d76ba2d1-4164-487a-a809-ac81628f3dbd?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 304 -
172.31.128.15 - - [05/Jun/2025 23:08:46] "GET /processos/visualizar/d76ba2d1-4164-487a-a809-ac81628f3dbd?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 304 -
 * Detected change in '/home/runner/workspace/apps/processos/routes.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/home/runner/workspace/run.py", line 26, in <module>
    app = create_app(app_config)
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/apps/__init__.py", line 73, in create_app
    app.register_blueprint(processos_bp)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/scaffold.py", line 50, in wrapper_func
    return f(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 1299, in register_blueprint
    blueprint.register(self, options)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/blueprints.py", line 439, in register
    deferred(state)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/blueprints.py", line 494, in <lambda>
    lambda s: s.add_url_rule(
              ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/blueprints.py", line 112, in add_url_rule
    self.app.add_url_rule(
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/scaffold.py", line 50, in wrapper_func
    return f(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 1361, in add_url_rule
    raise AssertionError(
AssertionError: View function mapping is overwriting an existing endpoint function: processos_bp.aprovar